--- a/css/demo.scss
+++ b/css/demo.scss
@@ -127,13 +127,13 @@ body > .wrap {
 }
 
 .btn.white {
-    background: transparent;
-    border: solid 1px #FFF;
-    color: #FFF;
+    background: transparent !important;
+    border: solid 1px #FFF !important;
+    color: #FFF !important;
 
     &:hover {
-        color: $primary;
-        background: #FFF;
+        color: $primary !important;
+        background: #FFF !important;
     }
 }
 
