--- a/css/includes/icomoon.scss
+++ b/css/includes/icomoon.scss
@@ -1,3 +1,5 @@
+/* ICONS */
+
 @font-face {
   font-family: 'icomoon';
   src:  url('fonts/icomoon.eot?v227c5');
@@ -33,4 +35,3 @@
 .icon-checked:before {
   content: "\e901";
 }
-
