--- a/css/onion-nebula.scss
+++ b/css/onion-nebula.scss
@@ -1,7 +1,7 @@
-/* -- ONION NEBULA CSS -- */
+/* -- INITIAL STRUCTURE -- */
+body,html{width:100%;height:100%;margin:0;padding:0;font-size:62.5%;&{-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}}body{font-size:1.4rem}*,*:before,*:after{box-sizing:border-box}html,body,h1,h2,h3,h4,h5,h6,ul,ol,p{margin:0;padding:0}ul{list-style:none}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover,img:active,img:hover{outline:0;border:0}input,input:focus,textarea,textarea:focus,select,select:focus,button,button:focus{border:0;outline:none}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:700}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}img{max-width:100%;height:auto;border:0;vertical-align:middle}svg:not(:root){overflow:hidden}figure{margin:0}hr{box-sizing:content-box;height:0}pre{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:700}table{border-collapse:collapse;border-spacing:0}td,th{padding:0}picture{max-width:100%;height:auto}picture img{max-width:100%;height:auto;border:0;vertical-align:middle}.wrap{display:-webkit-box;display:-ms-flexbox;display:flex;-ms-flex-direction:row;-webkit-box-orient:horizontal;-webkit-box-direction:normal;flex-direction:row;-ms-flex-wrap:wrap;flex-wrap:wrap;-ms-flex-preferred-size:100%;flex-basis:100%;width:100%;max-width:1180px;margin:0 auto;padding:0 10px}@media only screen{.s-1,.s-2,.s-3,.s-4,.s-5,.s-6,.s-7,.s-8,.s-9,.s-10,.s-11,.s-12,.s-13,.s-14,.s-15,.s-16,.s-17,.s-18,.s-19,.s-20,.s-21,.s-22,.s-23,.s-24{-ms-flex-preferred-size:auto;flex-basis:auto;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0;position:static}.s-0{width:0;height:0;-ms-flex-preferred-size:0;flex-basis:0;position:absolute;left:0;top:0;opacity:0;z-index:-10;visibility:hidden}.s-1{width:4.16667%}.s-2{width:8.33333%}.s-3{width:12.5%}.s-4{width:16.66667%}.s-5{width:20.83333%}.s-6{width:25%}.s-7{width:29.16667%}.s-8{width:33.33333%}.s-9{width:37.5%}.s-10{width:41.66667%}.s-11{width:45.83333%}.s-12{width:50%}.s-13{width:54.16667%}.s-14{width:58.33333%}.s-15{width:62.5%}.s-16{width:66.66667%}.s-17{width:70.83333%}.s-18{width:75%}.s-19{width:79.16667%}.s-20{width:83.33333%}.s-21{width:87.5%}.s-22{width:91.66667%}.s-23{width:95.83333%}.s-24{width:100%}}@media only screen and (min-width:641px){.m-1,.m-2,.m-3,.m-4,.m-5,.m-6,.m-7,.m-8,.m-9,.m-10,.m-11,.m-12,.m-13,.m-14,.m-15,.m-16,.m-17,.m-18,.m-19,.m-20,.m-21,.m-22,.m-23,.m-24{-ms-flex-preferred-size:auto;flex-basis:auto;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0;position:static;visibility:visible;height:auto}.m-0{width:0;height:0;-ms-flex-preferred-size:0;flex-basis:0;position:absolute;visibility:hidden;left:0;top:0;opacity:0;z-index:-10}.m-1{width:4.16667%}.m-2{width:8.33333%}.m-3{width:12.5%}.m-4{width:16.66667%}.m-5{width:20.83333%}.m-6{width:25%}.m-7{width:29.16667%}.m-8{width:33.33333%}.m-9{width:37.5%}.m-10{width:41.66667%}.m-11{width:45.83333%}.m-12{width:50%}.m-13{width:54.16667%}.m-14{width:58.33333%}.m-15{width:62.5%}.m-16{width:66.66667%}.m-17{width:70.83333%}.m-18{width:75%}.m-19{width:79.16667%}.m-20{width:83.33333%}.m-21{width:87.5%}.m-22{width:91.66667%}.m-23{width:95.83333%}.m-24{width:100%}}@media only screen and (min-width:1025px){.l-1,.l-2,.l-3,.l-4,.l-5,.l-6,.l-7,.l-8,.l-9,.l-10,.l-11,.l-12,.l-13,.l-14,.l-15,.l-16,.l-17,.l-18,.l-19,.l-20,.l-21,.l-22,.l-23,.l-24{-ms-flex-preferred-size:auto;flex-basis:auto;-webkit-box-flex:0;-ms-flex-positive:0;flex-grow:0;-ms-flex-negative:0;flex-shrink:0;position:static;visibility:visible;height:auto}.l-0{width:0;height:0;-ms-flex-preferred-size:0;flex-basis:0;position:absolute;visibility:hidden;left:0;top:0;opacity:0;z-index:-10}.l-1{width:4.16667%}.l-2{width:8.33333%}.l-3{width:12.5%}.l-4{width:16.66667%}.l-5{width:20.83333%}.l-6{width:25%}.l-7{width:29.16667%}.l-8{width:33.33333%}.l-9{width:37.5%}.l-10{width:41.66667%}.l-11{width:45.83333%}.l-12{width:50%}.l-13{width:54.16667%}.l-14{width:58.33333%}.l-15{width:62.5%}.l-16{width:66.66667%}.l-17{width:70.83333%}.l-18{width:75%}.l-19{width:79.16667%}.l-20{width:83.33333%}.l-21{width:87.5%}.l-22{width:91.66667%}.l-23{width:95.83333%}.l-24{width:100%}}
 
-@import 'includes/_onion.scss';
-@import 'includes/_icomoon.scss';
+/* -- ONION NEBULA CSS -- */
 
 $primary: #533693;
 $secondary: #E30D89;
@@ -60,8 +60,12 @@ p {
 
 .btn {
     width: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+       -ms-flex-align: center;
+          align-items: center;
     height: $component-height;
     line-height: 1;
     padding: 0 20px;
@@ -72,25 +76,55 @@ p {
     text-decoration: none;
     text-align: center;
     text-transform: uppercase;
+    border: solid 1px transparent;
     background: $primary;
+
+    &:not(.disabled):hover {
+        background: transparent !important;
+        border: solid 1px !important;
+        color: $primary;
+    }
 
     &.secondary {
         background: $secondary;
+
+        &:hover {
+            color: $secondary;
+        }
     }
     &.green {
         background: $green;
+
+        &:hover {
+            color: $green;
+        }
     }
     &.blue {
         background: $blue;
+
+        &:hover {
+            color: $blue;
+        }
     }
     &.yellow {
         background: $yellow;
+
+        &:hover {
+            color: $yellow;
+        }
     }
     &.red {
         background: $red;
+
+        &:hover {
+            color: $red;
+        }
     }
     &.disabled {
         background: $gray;
+        &:hover {
+            border: solid 1px $gray !important;
+        }
     }
 }
 
@@ -108,13 +142,16 @@ p {
     text-transform: uppercase;
     text-decoration: none;
     padding-bottom: 3px;
+    background-image: -webkit-linear-gradient($primary, $primary), -webkit-linear-gradient($primary, $primary);
     background-image: linear-gradient($primary, $primary), linear-gradient($primary, $primary);
     background-size: 0 2px, 0 1px;
     background-repeat: no-repeat;
     background-position: center bottom, center calc(100% - 1px);
     background-color: transparent;
+    -webkit-transition:background 0s ease-out;
     transition: background 0s ease-out;
-    transition-duration: 0.3s;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
 
     &:hover {
         background-size: 100% 2px, 100% 1px;
@@ -122,26 +159,32 @@ p {
 
     &.pink {
         color: $secondary;
+        background-image: -webkit-linear-gradient($secondary, $secondary), -webkit-linear-gradient($secondary, $secondary);
         background-image: linear-gradient($secondary, $secondary), linear-gradient($secondary, $secondary);
     }
     &.green {
         color: $green;
+        background-image: -webkit-linear-gradient($green, $green), -webkit-linear-gradient($green, $green);
         background-image: linear-gradient($green, $green), linear-gradient($green, $green);
     }
     &.blue {
         color: $blue;
+        background-image: -webkit-linear-gradient($blue, $blue), -webkit-linear-gradient($blue, $blue);
         background-image: linear-gradient($blue, $blue), linear-gradient($blue, $blue);
     }
     &.yellow {
         color: $yellow;
+        background-image: -webkit-linear-gradient($yellow, $yellow), -webkit-linear-gradient($yellow, $yellow);
         background-image: linear-gradient($yellow, $yellow), linear-gradient($yellow, $yellow);
     }
     &.red {
         color: $red;
+        background-image: -webkit-linear-gradient($red, $red), -webkit-linear-gradient($red, $red);
         background-image: linear-gradient($red, $red), linear-gradient($red, $red);
     }
     &.disabled {
         color: $gray;
+        background-image: -webkit-linear-gradient($gray, $gray), -webkit-linear-gradient($gray, $gray);
         background-image: linear-gradient($gray, $gray), linear-gradient($gray, $gray);
 
         &:hover {
@@ -153,8 +196,11 @@ p {
 .nth {
     width: auto;
     min-width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
 
     &.p25 {
         margin-left: -25px;
@@ -174,17 +220,21 @@ form {
             height: $component-height;
             border: 0;
             border-radius: 0;
+            background-image: -webkit-linear-gradient($primary, $primary), -webkit-linear-gradient($gray, $gray);
             background-image: linear-gradient($primary, $primary), linear-gradient($gray, $gray);
             background-size: 0 2px, 100% 1px;
             background-repeat: no-repeat;
             background-position: center bottom, center calc(100% - 1px);
             background-color: transparent;
+            -webkit-transition:background 0s ease-out;
             transition: background 0s ease-out;
 
             &:focus {
+                background-image: -webkit-linear-gradient($primary, $primary), -webkit-linear-gradient($gray, $gray);
                 background-image: linear-gradient($primary, $primary), linear-gradient($gray, $gray);
                 background-size: 100% 2px, 100% 1px;
-                transition-duration: 0.3s;
+                -webkit-transition-duration: 0.3s;
+                        transition-duration: 0.3s;
             }
         }
 
@@ -222,6 +272,7 @@ form {
         top: 0;
         left: 0;
         color: $gray;
+        -webkit-transition:0.3s ease all;
         transition: 0.3s ease all;
     }
     input {
@@ -246,8 +297,12 @@ input[type=radio]:not(old) {
 
 input[type=checkbox]:not(old) + label,
 input[type=radio]:not(old) + label {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 input[type=checkbox]:not(old) + label > span,
@@ -269,15 +324,22 @@ input[type=radio]:not(old) + label > span:before {
 
 input[type=checkbox]:not(old) + label > span:before {
     content: "\e901";
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     height: 100%;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     font-family: 'icomoon';
     font-size: 1.2rem;
     color: $primary;
     line-height: 1;
+    -webkit-transition:all ease-in-out 0.3s;
     transition: all ease-in-out 0.3s;
 }
 
@@ -285,11 +347,14 @@ input[type=radio]:not(old) + label > span:before {
     content: '';
     width: 50%;
     height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 25%;
     line-height: 1;
     background: $primary;
     border-radius: 50% !important;
+    -webkit-transition:all ease-in-out 0.3s;
     transition: all ease-in-out 0.3s;
 }
 
@@ -302,16 +367,6 @@ input[type=radio]:not(old) + label > span {
     border-radius: 50% !important;
 }
 
-// input[type=radio]:not(old):checked + label > span > span{
-//     display          : block;
-//     width            : 0.5em;
-//     height           : 0.5em;
-//     margin           : 0.125em;
-//     border           : 0.0625em solid rgb(115,153,77);
-//     border-radius    : 0.125em;
-//     background       : rgb(153,204,102);
-// }
-
 ::-webkit-input-placeholder {
    color: $gray;
 }
@@ -322,8 +377,12 @@ input[type=radio]:not(old) + label > span {
 
 .alert {
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 18px;
     color: #FFF;
     font-size: 1.4rem;
